--- a/dongtai-xp.html
+++ b/dongtai-xp.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<link type="text/css" rel="stylesheet" href="css/styles.css" />
-	<title>系统</title>
-	<meta name="keywords" content="系统" />
-	<meta name="description" content="系统" />	
+	<title></title>
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />	
 
 	
 	<script type="text/javascript" src="js/reset.js"></script>
@@ -17,29 +17,55 @@
 	
 </head>
 
-<body>
+<body class="hui">
 	<div class="nav">
 		<div class="logo"><img src="images/logo.png" alt="" /></div>
 		<div class="nav-langeage">CN</div>
 		<div class="nav-toggler-icon"></div>
 	</div>
-	<div class="banner">
-		<img src="images/banner-xitong.jpg" />
+	
+	
+	<div class="banner mb-0">
+		<img src="images/banner-xp.jpg" />
 		<div class="banner-main">
-			<p>Dealer<br />system</p>
-			<h1>经销商系统</h1>		
+			<p>new product<br />news</p>
+			<h1>新品动态</h1>		
 			<span> suvarn latex</span>			
 		</div>
-
 	</div>
-	<div class="xitong">
-		<ul class="xitong-ul">
-			<li><a href="#">经销商登陆</a></li>
-			<li><a href="#">授权查询</a></li>
-			<li><a href="#">防伪查询</a></li>
+	
+	<ul class="dongtai-ul">
+		<li><a href="#">品牌动态</a></li>
+		<li><a href="#">新品动态</a></li>
+		<li><a href="#">团队动态</a></li>
+		<li><a href="#">企业公告</a></li>
+		<li><a href="#">产品养护</a></li>			
+	</ul>
 
-		</ul>
-	</div>
+			<div class="xp-h">
+				<p>suvarn<br />latex</p>
+				<h2>新品动态</h2>
+				<p class="right">new <br />product</p>
+			</div>
+			<dl class="dt-xp">
+				<dt class="left"><img src="images/xp-1.jpg" /></dt>
+				<dd class="right">
+					<p>TOPPER</p>
+					<h3>天然乳胶床垫</h3>
+					<a href="#">more + </a>
+				</dd>
+			</dl>
+			<dl class="dt-xp">
+				<dt class="right"><img src="images/xp-2.jpg" /></dt>
+				<dd class="left">
+					<p>TOPPER</p>
+					<h3>天然乳胶床垫</h3>
+					<a href="#">more + </a>					
+				</dd>
+			</dl>
+		
+	
+	
 	<div class="footer">
 		<ul class="ress">
 			<li>中国区联系电话<br />400-118-1400<br/>023-62955862</li>
