--- a/sqcx.html
+++ b/sqcx.html
@@ -24,9 +24,12 @@
 		<div class="nav-toggler-icon"></div>
 	</div>
 	<div class="banner-sqcx">
-		<p>AUTHORIZATION</p>
-		<h1>我的授权</h1>		
-		<span>suvarn latex</span>
+		<img src="images/banner-sqcx.jpg" />
+		<div class="banner-main">
+			<p>AUTHORIZATION</p>
+			<h1>我的授权</h1>		
+			<span>suvarn latex</span>
+		</div>
 	</div>
 	<div class="sqcx">
 		<form>
