--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@ $(function(){
 	
 <div id="dowebok">
 	<div class="section section1">
-		<img  src="images/banner.jpg" />
+
+		<h1>suvarn latex</h1>
+		<h2>为健康睡眠而生</h2>
+		<p>国际睡眠组织协会认证</p>
+		<p>品质级乳胶寝具品牌</p>
 	</div>
 	<div class="section section2">
 		<div class="slide">
@@ -148,6 +152,78 @@ $(function(){
 				<p>精华液</p>
 			</li>
 		</ul>
+		<p class="myp">每棵橡胶树1天只能采集30ML乳胶，15棵乳胶树一天的产量才能制作一个素万乳胶枕</p>
+		
+		  <div id="myjiankang" class="swiper-container">
+			<div class="swiper-wrapper">
+			  <div class="swiper-slide">
+				  <dl class="jiankang-items">
+					  <dt>天然优质原料</dt>
+					  <dd>
+						  <p>天然乳胶由橡胶树乳汁提炼而成，胶性温和亲肤，且可自然分解，完全无公害，符合环保要求。</p>
+					  </dd>
+				  </dl>
+				
+			  </div>
+			  <div class="swiper-slide">
+				  <dl class="jiankang-items">
+					  <dt>自然透气弹性舒适</dt>
+					  <dd>
+						  <p>天然乳胶自然透气、不吸尘，且有散热、抗霉、柔软舒适的特性。</p>
+					  </dd>
+				  </dl>			  
+			  </div>
+			  <div class="swiper-slide">
+				  <dl class="jiankang-items">
+					  <dt>超强散热性</dt>
+					  <dd>
+						  <p>新一代的乳胶发泡技术以高密度、网状立体排列方式，让乳胶细胞结构得到更好的散热性和支撑力。</p>
+					  </dd>
+				  </dl>			  
+			  </div>
+			  <div class="swiper-slide">
+				  <dl class="jiankang-items">
+					  <dt>良好的支撑性</dt>
+					  <dd>
+						  <p>纯天然乳胶由数百万个气泡体组成，均匀的给头部最贴切的支撑，让颈椎受压平均，可避免因不正确的睡姿引起的各种酸痛。</p>
+					  </dd>
+				  </dl>			  
+			  </div>
+			  <div class="swiper-slide">
+				  <dl class="jiankang-items">
+					  <dt>天然防螨抑菌功能</dt>
+					  <dd>
+						  <p>橡树乳汁透过蒸煮之后，会释放出一种橡胶蛋白，可以有效抑制病菌及防止过敏原潜伏，所以天然乳胶是最天然的防螨抗菌健康枕头，尤其对有哮喘症状的人，更是必备的天然好枕头。</p>
+					  </dd>
+				  </dl>			  
+			  </div>
+			  <div class="swiper-slide">
+				  <dl class="jiankang-items">
+					  <dt>服帖性高</dt>
+					  <dd>
+						  <p>纯天然乳胶是由数百万个气泡体组成，拥有极高的服帖性与细致弹力，可以将人体重量压力平均转换成轻柔的紧密贴合接触，可让人轻松入睡，尤其对孕妇、老人、小孩有极佳帮助。</p>
+					  </dd>
+				  </dl>			  
+			  </div>
+			  <div class="swiper-slide">
+				  <dl class="jiankang-items">
+					  <dt>防震抗扰性强</dt>
+					  <dd>
+						  <p>在数百万个气泡轻松撑托下，就算在床上翻动，也不会影响到身边同睡的人。</p>
+					  </dd>
+				  </dl>			  
+			  </div>
+
+			  
+			</div>
+			<!-- Add Pagination -->
+				<div class="swiper-button-next "><svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 27 44'><path d='M27,22L27,22L5,44l-2.1-2.1L22.8,22L2.9,2.1L5,0L27,22L27,22z' fill='#ffffff'/></svg></div>
+				<div class="swiper-button-prev"><svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 27 44'><path d='M0,22L22,0l2.1,2.1L4.2,22l19.9,19.9L22,44L0,22L0,22L0,22z' fill='#ffffff'/></svg></div>
+
+		  </div>			
+		
+		
+		
 	</div>
 	<div class="section section5">
 		<h2>user<br />experience</h2>
@@ -157,31 +233,31 @@ $(function(){
 			<div class="swiper-wrapper">
 			  <div class="swiper-slide">
 				  <dl class="user-experience">
-					  <dt><img src="images/user-icon.png" /></dt>
+					  <dt><img src="images/user-icon-1.png" /></dt>
 					  <dd>
-						  <h4>赵女士</h4>
-						  <h5>Ms Zhao</h5>
+						  <h4>李女士</h4>
+						  <h5>Ms Li</h5>
 						  <p>收到后枕了枕发现真的很舒服，软硬适中，支撑力很好，并且是纯天然的材料对身体没有任何坏处。就像介绍中说的那样，乳胶枕有一股淡淡的乳香味，但是套上枕套和枕巾之后就完全闻不到了，所以并不会有什么不习惯的。</p>
 					  </dd>
 				  </dl>
 			  </div>
 			  <div class="swiper-slide">
 				  <dl class="user-experience">
-					  <dt><img src="images/user-icon.png" /></dt>
+					  <dt><img src="images/user-icon-2.png" /></dt>
 					  <dd>
 						  <h4>赵女士</h4>
 						  <h5>Ms Zhao</h5>
-						  <p>收到后枕了枕发现真的很舒服，软硬适中，支撑力很好，并且是纯天然的材料对身体没有任何坏处。就像介绍中说的那样，乳胶枕有一股淡淡的乳香味，但是套上枕套和枕巾之后就完全闻不到了，所以并不会有什么不习惯的。</p>
+						  <p>只能说一分钱一分货，睡惯了乳胶床垫，真真儿的后悔没有早些买早些享受。<br />素万让我明白什么叫软中带支撑的Q弹感。透气性也不错，感觉重点还是在天然乳胶上，真的太好睡，强烈推荐。 </p>
 					  </dd>
 				  </dl>				  
 			  </div>
 			  <div class="swiper-slide">
 				  <dl class="user-experience">
-					  <dt><img src="images/user-icon.png" /></dt>
+					  <dt><img src="images/user-icon-3.png" /></dt>
 					  <dd>
-						  <h4>赵女士</h4>
-						  <h5>Ms Zhao</h5>
-						  <p>收到后枕了枕发现真的很舒服，软硬适中，支撑力很好，并且是纯天然的材料对身体没有任何坏处。就像介绍中说的那样，乳胶枕有一股淡淡的乳香味，但是套上枕套和枕巾之后就完全闻不到了，所以并不会有什么不习惯的。</p>
+						  <h4>张女士</h4>
+						  <h5>Ms Zhang</h5>
+						  <p>刚拿到枕头的时候，闻了就是天然的橡胶原液的味道，不刺鼻不闷头，没有别人说的那股香味。<br />确实也不是纯白色的，淡淡的发黄，有了它以后，睡眠质量提升了不少，准备再买一个送给好朋友。 </p>
 					  </dd>
 				  </dl>				  
 			  </div>
@@ -276,7 +352,16 @@ $(function(){
 
 	
 
-	
+  <script>
+    var swiper = new Swiper('#myjiankang', {
+	      loop: true,  	  
+		  navigation: {
+			nextEl: '.swiper-button-next',
+			prevEl: '.swiper-button-prev',
+		  },
+
+    });
+  </script>	
   <script>
     var swiper = new Swiper('#myuser', {
       pagination: {
